2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cpp/cbrowser2.c (main): Print an error
	to stdout and exit if the xref_file given does
	not exist. Don't flush stdout after a read of
	a non-cppref line. Performance will be much
	better if the buffer is allowed to fill up before
	it is flushed.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	Split parser functionality out of db/dbutils.c
	and move it into parsers/common/parser.c.
	With this change, a parser need only be linked
	to libcommon.a. Parsers will no longer need
	to link to libdbutils.a and libdb.a, with the
	exception of the evil C/C++ parser which does
	things its own way.

	* db/Makefile.am: Remove longstr.c in
	libdbutils_a_SOURCES.
	* db/Makefile.in: Regen.
	* db/dbutils.c (pipe_handle, Paf_dbimp_running,
	report_local_vars, cross_ref_fp, comment_database,
	acc_strings, SN_symbol_types, Paf_tempnam,
	create_table, put_file, put_comment, put_symbol,
	put_cross_ref, db_remove_file_def, db_insert_entry,
	inherit_members, load_class_members,
	search_for_symbol, Paf_Pipe_Create, Paf_Pipe_Flush,
	Paf_Pipe_Close, Paf_Pipe_Write, put_status_parsing_file):
	Move all parser related functionality into
	misc/libutils/longstr.c. Move the SN_symbol_types
	into strs.c and turn it into an access function
	called SN_GetSymbolType since it is needed in
	both the db and parser layers. Remove the
	Paf_dbimp_running logic since it is never used.
	* db/longstr.c: Moved to misc/libutils.
	* db/longstr.h: Moved to misc/libutils.
	* hyper/Makefile.am: Reorder the libutils.a
	link since it must appear after libdbutils.a.
	* hyper/Makefile.in: Regen.
	* hyper/sn.h: Define new PAF_SYMBOL_TYPE_MAX
	value used when iterating over members with
	the SN_GetSymbolType functions. Move declarations
	for put_symbol, put_cross_ref, put_file, put_comment,
	put_status_parsing_file, Paf_Pipe_Create,
	Paf_Pipe_Close, and Paf_tempnam into parser.h.
	Remove unused Paf_Macro decl and add a decl
	for SN_GetSymbolType.